--- a/ui/src/main/res/layout/activity_main.xml
+++ b/ui/src/main/res/layout/activity_main.xml
@@ -5,75 +5,89 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_background"
     tools:context="com.wireguard.android.activity.MainActivity">
 
-    <TextView
-        android:id="@+id/bubbleConnectionTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="@dimen/margin_start_and_end"
-        android:fontFamily="@font/josefin_sans"
-        android:letterSpacing="-0.02"
-        android:text="@string/my_bubble"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="@dimen/margin_start_and_end"
-        android:layout_marginEnd="@dimen/margin_start_and_end"
-        android:text="@string/your_private_bubble"
-        android:textAlignment="center"
+    <ImageView
+        android:layout_width="450dp"
+        android:layout_height="770dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/union"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bubbleConnectionTitle" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/bubbleConnectionTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_and_end"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="@dimen/margin_start_and_end"
+                android:fontFamily="@font/josefin_sans"
+                android:letterSpacing="-0.02"
+                android:text="@string/my_bubble"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_and_end"
+                android:layout_marginTop="@dimen/margin_start_and_end"
+                android:layout_marginEnd="@dimen/margin_start_and_end"
+                android:text="@string/your_private_bubble"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bubbleConnectionTitle" />
 
 
     <ImageView
         android:id="@+id/imageMyBubble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="285.56dp"
+        android:layout_height="378.72dp"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="@dimen/margin_start_and_end"
         android:layout_marginEnd="@dimen/margin_start_and_end"
+        android:layout_marginBottom="120dp"
         android:src="@drawable/bubble_disconnected"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toTopOf="@+id/constraints" />
 
     <TextView
         android:id="@+id/titleMyBubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_marginBottom="45dp"
         android:letterSpacing="-0.05"
         android:text="@string/bubble_status"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/constraints"
         app:layout_constraintEnd_toEndOf="@+id/imageMyBubble"
-        app:layout_constraintStart_toStartOf="@+id/imageMyBubble"
-        app:layout_constraintTop_toTopOf="@+id/imageMyBubble" />
+        app:layout_constraintStart_toStartOf="@+id/imageMyBubble" />
 
     <ImageView
         android:id="@+id/mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="80dp"
         android:visibility="gone"
         android:layout_marginEnd="@dimen/margin_start_and_end"
         android:src="@drawable/mark"
+
         app:layout_constraintEnd_toEndOf="@+id/imageMyBubble"
         app:layout_constraintStart_toStartOf="@+id/imageMyBubble"
         app:layout_constraintTop_toTopOf="@+id/imageMyBubble" />
@@ -83,12 +97,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="@dimen/margin_start_and_end"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="120dp"
         android:text="@string/not_connected_bubble"
         android:textColor="@color/gray"
-        android:textSize="@dimen/text_title"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/imageMyBubble"
         app:layout_constraintStart_toStartOf="@+id/imageMyBubble"
@@ -99,13 +113,13 @@
         android:layout_width="@dimen/edit_text_width"
         android:layout_height="@dimen/edit_text_height"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="@dimen/margin_start_and_end"
-        android:background="@color/white"
+        android:background="@android:color/transparent"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageMyBubble">
+        app:layout_constraintTop_toBottomOf="@+id/constraints">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/connectButton"
@@ -122,42 +136,51 @@
 
     <ImageButton
         android:id="@+id/myBubbleImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="44dp"
         android:background="@drawable/my_bubble"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageMyBubble" />
+        app:layout_constraintEnd_toStartOf="@+id/accountImageView"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageButton
+                android:id="@+id/accountImageView"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="@dimen/margin_start_and_end"
+                android:layout_marginEnd="@dimen/margin_start_and_end"
+                android:background="@drawable/account"
+                app:layout_constraintBottom_toBottomOf="@+id/myBubbleImageView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/myBubbleImageView"
+                app:layout_constraintTop_toTopOf="@+id/myBubbleImageView" />
 
     <ImageButton
-        android:id="@+id/accountImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_start_and_end"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="@dimen/margin_start_and_end"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/myBubbleImageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageMyBubble" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="24dp"
+        android:id="@+id/imageButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/accountImageView"
         app:layout_constraintStart_toEndOf="@+id/myBubbleImageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageMyBubble" />
+        app:layout_constraintTop_toTopOf="@+id/myBubbleImageView" />
 
+    <androidx.constraintlayout.widget.Constraints
+        android:id="@+id/constraints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_start_and_end"
+        android:layout_marginTop="@dimen/margin_start_and_end"
+        android:layout_marginEnd="@dimen/margin_start_and_end"
+        android:layout_marginBottom="@dimen/margin_start_and_end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
