--- a/ui/src/main/res/layout/activity_main.xml
+++ b/ui/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
+    android:background="@drawable/bkrnd"
     tools:context="com.wireguard.android.activity.MainActivity">
 
 
