--- a/ui/src/main/res/layout/error_layout.xml
+++ b/ui/src/main/res/layout/error_layout.xml
@@ -51,7 +51,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/connectButton"
+            android:id="@+id/contactSupportButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/contact_support"
